<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollAds"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@id/main"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_v31"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingTop="10dp" >

                <!-- BMI tab1 -->

                <TextView
                    android:id="@+id/tvBMIHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:gravity="left"
                    android:text="@string/bmiHeader"
                    android:textColor="#ffffff"
                    android:textSize="60sp"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/tvBFCalculator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="-10dp"
                    android:layout_marginTop="-15dp"
                    android:text="@string/bfCalculator"
                    android:textColor="#ffffff"
                    android:textSize="40sp"
                    android:typeface="normal" />

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp" >

                        <TextView
                            android:id="@+id/tvHeight"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="10dp"
                            android:paddingTop="22dp"
                            android:text="@string/height"
                            android:textColor="#ffffff"
                            android:textStyle="bold"
                            android:typeface="normal" />

                        <EditText
                            android:id="@+id/etHeightCm"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="start"
                            android:gravity="center"
                            android:hint="@string/cm"
                            android:inputType="numberDecimal"
                            android:maxLength="5" >
                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/tvWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginBottom="10dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="10dp"
                            android:paddingTop="10dp"
                            android:text="@string/weight"
                            android:textColor="#ffffff"
                            android:textStyle="bold"
                            android:typeface="normal" />

                        <EditText
                            android:id="@+id/etWeightKgs"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="start"
                            android:gravity="center"
                            android:hint="@string/kgs"
                            android:imeOptions="actionDone"
                            android:inputType="numberDecimal"
                            android:maxLength="5" >
                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingTop="10dp" >

                        <Button
                            android:id="@+id/bCalculate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bcalc" >
                        </Button>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvBmiText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#ffffffff"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="a15013630b80646"
        android:gravity="center" />

</RelativeLayout>