<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollAds"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/main"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/bg_v31"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingTop="10dp" >

                <!-- BMI tab1 -->

                <TextView
                    android:id="@+id/tvWaistTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:gravity="left"
                    android:text="@string/waistT"
                    android:textColor="#ffffff"
                    android:textSize="60sp"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/tvHip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="-10dp"
                    android:layout_marginTop="-15dp"
                    android:text="@string/toHip"
                    android:textColor="#ffffff"
                    android:textSize="40sp"
                    android:typeface="normal" />

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center" >

                        <RadioGroup
                            android:id="@+id/group1"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <RadioButton
                                android:id="@+id/rbMale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="@string/Male" />

                            <RadioButton
                                android:id="@+id/rbFemale"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:text="@string/Female" />
                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp" >

                        <TextView
                            android:id="@+id/tvWaistIn"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="10dp"
                            android:paddingTop="22dp"
                            android:text="@string/waist"
                            android:textColor="#ffffff"
                            android:textStyle="bold"
                            android:typeface="normal" />

                        <EditText
                            android:id="@+id/etWaistIn"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="start"
                            android:gravity="center"
                            android:hint="@string/waistIn"
                            android:inputType="numberDecimal"
                            android:maxLength="5" >
                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/tvHipIn"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginBottom="10dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="10dp"
                            android:paddingTop="10dp"
                            android:text="@string/hipIn"
                            android:textColor="#ffffff"
                            android:textStyle="bold"
                            android:typeface="normal" />

                        <EditText
                            android:id="@+id/etHipIn"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:ellipsize="start"
                            android:gravity="center"
                            android:hint="@string/hipIn"
                            android:imeOptions="actionDone"
                            android:inputType="numberDecimal"
                            android:maxLength="5" >
                        </EditText>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" >

                        <Button
                            android:id="@+id/bCalculate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bcalc"
                            android:paddingTop="10dp" >
                        </Button>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvWTHRatioTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/tvRiskTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:typeface="normal" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="a15013630b80646"
        android:gravity="center" />

</RelativeLayout>